--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,1 @@
-# Configuração da API
-# URL base da API backend
-# Exemplo para desenvolvimento local: http://localhost:3000
-# Exemplo para produção: https://api.sanorte.com.br
-VITE_API_BASE_URL=http://localhost:3000
+VITE_API_URL=http://localhost:3000
